Configuration of Events and Sensors are working with dynamic forms
Former-commit-id: ff81dee3365eee865099badc73ca70bc7cb222c6

--- a/web-resource/event_config.tmpl
+++ b/web-resource/event_config.tmpl
@@ -22,7 +22,7 @@
                 <tr>
                     <td>{{.getName()}}</td>
                     <td>{{.getType()}}</td>
-                    <td>{{.getConfig()}}</td>
+                    <td>{{.getDeviceData()}}</td>
                     <td>
                         <form method="POST">
                             <input type="hidden" name="action" value="remove_local_event">
@@ -34,7 +34,10 @@
                                         data-id="{{.getId()}}"
                                         data-name="{{.getName()}}"
                                         data-type="{{.getType()}}"
-                                        data-config="{{.getConfig()}}">
+                                        {{#.getDeviceConfig().getConfiguration()}}
+                                        data-{{.getName()}}="{{.getString()}}"
+                                        {{/.getDeviceConfig().getConfiguration()}}
+                                        >
                                     <span class="glyphicon glyphicon-pencil"></span>
                                 </button>
 
@@ -64,7 +67,10 @@
                             <button type="button" class="btn btn-default btn-xs" data-toggle="modal"
                                     data-target="#eventModal"
                                     data-type="{{.getClass().getName()}}"
-                                    data-config="{{.}}">
+                                    {{#.getDeviceConfig().getConfiguration()}}
+                                    data-{{.getName()}}="{{.getString()}}"
+                                    {{/.getDeviceConfig().getConfiguration()}}
+                                    >
                                 <span class="glyphicon glyphicon-plus"></span>
                             </button>
                         </div>
@@ -96,18 +102,21 @@
             var modal = $(this);
             modal.find("input[type=text]").val(""); // Reset all inputs
             if(button.data("id") >= 0){ // edit
-                modal.find("input[name=action]").val("modify_local_event");
-                modal.find("input[name=id]").val(button.data("id"));
-                modal.find("input[name=name]").val(button.data("name"));
                 modal.find("select[name=type]").val(button.data("type"));
-                modal.find("input[name=config]").val(button.data("config"));
+                modal.find("select[name=type]").change(); // Update dynamic inputs
+                $.each(button.attr(), function(name, value) {
+                    if(name.startsWith("data-")) {
+                        name = name.substring(5);
+                        console.log(name, value);
+                        modal.find("input[name="+name+"]").val(value);
+                    }
+                });
+                modal.find("input[name=action]").val("modify_local_event");
             }
             else{ // create
                 modal.find("input[name=action]").val("create_local_event");
                 modal.find("input[name=id]").val(-1);
             }
-            // Update dynamic inputs
-            modal.find("select[name=type]").change();
         });
     });
 </script>
