--- a/web-resource/index.tmpl
+++ b/web-resource/index.tmpl
@@ -10,10 +10,12 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/hal.css" rel="stylesheet">
 
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/hal.js"></script>
+
 </head>
 
 <body>
