Removed hard coded users in PCOverview
Former-commit-id: 2a6372ac048c09a2ad201c491d7ffc3dc37025e5

--- a/web-resource/pc_overview.tmpl
+++ b/web-resource/pc_overview.tmpl
@@ -45,7 +45,7 @@
 				]
 		);
 	});
-    var userArray = [ {{#username}} "{{.}}", {{/username}} ];
+    var userArray = [ {{#username}} "{{.getUsername()}}", {{/username}} ];
     function chartData(elementId, data){
         Morris.Line({
               element: elementId,
