--- a/web-resource/event_overview.tmpl
+++ b/web-resource/event_overview.tmpl
@@ -7,16 +7,18 @@
 
             <table class="table table-hover table-condensed">
                 <thead>
-                    <th class="col-md-5">Name</th>
-                    <th class="col-md-3">Data</th>
-                    <th class="col-md-3">Last Update</th>
-                    <th class="col-md-1">Actions</th>
+                    <th class="col-md-4">Name</th>
+                    <th class="col-md-3">Type</th>
+                    <th class="col-md-2">Data</th>
+                    <th class="col-md-2">Last Update</th>
+                    <th class="col-md-1 text-right">Actions</th>
                 </thead>
                 {{#events}}
                 <tr>
                     <td><a href="?id={{.getId()}}">{{.getName()}}</a></td>
-                    <td>{{.getData()}}</td>
-                    <td>updated 1 min ago</td>
+                    <td>{{.getDeviceData().getClass().getSimpleName()}}</td>
+                    <td>{{.getDeviceData().getData()}}</td>
+                    <td>1 min ago</td>
                     <td>
                         <form method="POST">
                             <input type="hidden" name="action" value="-">
