Added graph to sensor detail page. Also added missed morris.css file . issue 7
Former-commit-id: 3b2403a46aa58f3937efc345bc6a022e4deb2da5

--- a/web-resource/main_index.tmpl
+++ b/web-resource/main_index.tmpl
@@ -11,12 +11,16 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-switch.min.css" rel="stylesheet">
+    <link href="css/morris.css" rel="stylesheet">
     <link href="css/hal.css" rel="stylesheet">
 
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-switch.min.js"></script>
     <script src="js/hal.js"></script>
+
+    <script src="js/raphael.min.js"></script>
+    <script src="js/morris.min.js"></script>
 
 </head>
 
