detected device bug fix
Former-commit-id: f56ddf18a7db16ef07874aceb1d49b7aa4b1bcdd

--- a/web-resource/event_config.tmpl
+++ b/web-resource/event_config.tmpl
@@ -61,14 +61,14 @@
                 </thead>
                 {{#detectedEvents}}
                 <tr>
-                    <td>{{.getClass().getName()}}</td>
-                    <td>{{.getTimestamp()}}</td>
+                    <td>{{.getType()}}</td>
+                    <td>{{.getDeviceData().getTimestamp()}}</td>
                     <td>{{.}}</td>
                     <td>
                         <div class="btn-toolbar pull-right">
                             <button type="button" class="btn btn-default btn-xs" data-toggle="modal"
                                     data-target="#eventModal"
-                                    data-type="{{.getClass().getName()}}"
+                                    data-type="{{.getType()}}"
                                     {{#.getDeviceConfig().getConfiguration()}}
                                     data-{{.getName()}}="{{.getString()}}"
                                     {{/.getDeviceConfig().getConfiguration()}}
