Added relative timestamps
Former-commit-id: 5ea7e7519cbe1059d9595a82229b7c7de3ef17bf

--- a/web-resource/event_config.tmpl
+++ b/web-resource/event_config.tmpl
@@ -62,7 +62,7 @@
                 {{#detectedEvents}}
                 <tr>
                     <td>{{.getType()}}</td>
-                    <td>{{.getDeviceData().getTimestamp()}}</td>
+                    <td><span class="timestamp">{{.getDeviceData().getTimestamp()}}</span></td>
                     <td>{{.getDeviceData()}}</td>
                     <td>
                         <div class="btn-toolbar pull-right">
