--- a/web-resource/sensor_config.tmpl
+++ b/web-resource/sensor_config.tmpl
@@ -65,7 +65,7 @@
                 {{#detectedSensors}}
                 <tr>
                     <td>{{.getType()}}</td>
-                    <td>{{.getDeviceData().getTimestamp()}}</td>
+                    <td><span class="timestamp">{{.getDeviceData().getTimestamp()}}</span></td>
                     <td>{{.getDeviceData()}}</td>
                     <td>
                         <div class="btn-toolbar pull-right">
