--- a/web-resource/event_detail.tmpl
+++ b/web-resource/event_detail.tmpl
@@ -36,7 +36,7 @@
                 </thead>
                 {{#history}}
                 <tr>
-                    <td>{{.timestamp}}</a></td>
+                    <td><span class="timestamp">{{.timestamp}}</span></td>
                     <td>{{.data}}</td>
                 </tr>
                 {{/history}}
