--- a/web-resource/event_overview.tmpl
+++ b/web-resource/event_overview.tmpl
@@ -18,7 +18,7 @@
                     <td><a href="?id={{.getId()}}">{{.getName()}}</a></td>
                     <td>{{.getDeviceData().getClass().getSimpleName()}}</td>
                     <td>{{.getDeviceData().getData()}}</td>
-                    <td>{{.getDeviceData().getTimestamp()}}</td>
+                    <td><span class="timestamp">{{.getDeviceData().getTimestamp()}}</span></td>
                     <td>
                         <form method="POST">
                             <input type="hidden" name="action" value="-">
