--- a/web-resource/main_index.tmpl
+++ b/web-resource/main_index.tmpl
@@ -17,6 +17,7 @@
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap-switch.min.js"></script>
+    <script src="js/moment.js"></script>
     <script src="js/hal.js"></script>
 
     <script src="js/raphael.min.js"></script>
