Added relative timestamps. issue 14
Former-commit-id: 3504444f91bb2dec714e02b15aa6bf31edda9573

--- a/web-resource/event_overview.tmpl
+++ b/web-resource/event_overview.tmpl
@@ -27,7 +27,7 @@
                             <div class="btn-toolbar pull-right">
                                 <input class="toggle-switch"  type="checkbox" name="data"
                                        data-size="mini" data-on-color="danger"
-                                       {{#.getData()}}checked{{/.getData()}} >
+                                       {{#.getDeviceData().getData()}}checked{{/.getDeviceData().getData()}} >
                             </div>
                         </form>
                     </td>
