--- a/resource/web/sensor_detail.tmpl
+++ b/resource/web/sensor_detail.tmpl
@@ -22,7 +22,7 @@
 
 <div class="col-md-12">
     <div class="panel panel-default drop-shadow">
-        <div class="panel-heading">Chart</div>
+        <div class="panel-heading">Last 24 hours</div>
         <div class="panel-body">
             <div id="chart" style="height:350px;"></div>
         </div>
