Charts will autohide the popup and fixed logging property

--- a/resource/web/pc_overview.tmpl
+++ b/resource/web/pc_overview.tmpl
@@ -63,7 +63,8 @@
               continuousLine: false,
               pointSize: 1,
               postUnits: 'kWh',
-              resize: true
+              resize: true,
+              hideHover: 'auto',
             });
     }
 </script>
