--- a/resource/web/sensor_detail.tmpl
+++ b/resource/web/sensor_detail.tmpl
@@ -15,7 +15,8 @@
             ykeys: ['data'],
             labels: ['Data'],
             continuousLine: false,
-            resize: true
+            resize: true,
+            hideHover: 'auto',
         });
 	});
 </script>
